# napari-plugin-manager

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE.md  codecov.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: deploy_docs.yml  test_and_deploy.yaml  test_and_deploy.yml  tests_and_deploy.yaml
docs/: _toc.yml  conf.py
docs/_templates/: navbar-project.html
docs/developers/: contributing.md
napari_plugin_manager/: base_qt_package_installer.py  base_qt_plugin_dialog.py  config.py  napari.yaml  npe2api.py  qt_check_updates.py  qt_package_installer.py  qt_plugin_dialog.py  qt_update_checker.py  qt_widgets.py  styles.qss  utils.py
napari_plugin_manager/_tests/: conftest.py  test_base_installer_process.py  test_config.py  test_installer_process.py  test_npe2api.py  test_qt_plugin_dialog.py
src/napari_plugin_manager/: _rattler_installer.py  _version.py  base_qt_package_installer.py  base_qt_plugin_dialog.py  npe2api.py  qt_package_installer.py  qt_plugin_dialog.py  qt_warning_dialog.py  qt_widgets.py  styles.qss  utils.py
src/napari_plugin_manager/_tests/: conftest.py  test_installer_process.py  test_npe2api.py  test_qt_plugin_dialog.py  test_utils.py
